# manuk-kepudang

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: case1_ordered_phase.txt  case2_disordered_phase.txt  case3_large_system.txt  case4_phase_transition.txt
src/manuk_kepudang/: __init__.py  cli.py
src/manuk_kepudang/core/: __init__.py  metrics.py  solver.py  systems.py
src/manuk_kepudang/io/: __init__.py  config_manager.py  data_handler.py
src/manuk_kepudang/utils/: __init__.py  logger.py  timer.py
src/manuk_kepudang/visualization/: __init__.py  animator.py
