[tool.poetry]
name = "manuk-kepudang"
version = "0.0.1"
description = "3D Vicsek Model Collective Motion Simulator with Numba Acceleration"
authors = ["Sandy H. S. Herho <sandy.herho@email.ucr.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "manuk_kepudang", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">=1.20.0"
scipy = ">=1.7.0"
matplotlib = ">=3.3.0"
netCDF4 = ">=1.5.0"
tqdm = ">=4.60.0"
pandas = ">=1.3.0"
Pillow = ">=8.0.0"
numba = ">=0.53.0"

[tool.poetry.group.dev.dependencies]
black = ">=22.0.0"

[tool.poetry.scripts]
manuk-kepudang = "manuk_kepudang.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
